--- a/notebooks/ml_main.ipynb
+++ b/notebooks/ml_main.ipynb
@@ -226,9 +226,10 @@
    ],
    "source": [
     "#Pipeline\n",
-    "# We made predictions without Features reduction\n",
+    "# We will test with and without feature reduction\n",
     "# Only 12 features, and all of them seems important to not have more unbalanced data, no need to reduce\n",
     "# Also, it does not take much time to take all 12 than reduce to 8 or Even 4 as suggested by RFECV test\n",
+    "# But we will show that a model with 6 features only is almost equivalent\n",
     "steps = [('preprocessing', pp.PreprocessingTransformer(verbose=True)),\n",
     "         ('rfe', rfe),\n",
     "         ('clf', ExtraTreesClassifier())\n",
